include_directories(src)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib")


set(COMMON_SRC_FILES
        src/math/cell3DPosition.h
        src/math/cell3DPosition.cpp
        src/base/blockCode.cpp
        src/base/blockCode.h
        src/base/buildingBlock.cpp
        src/base/buildingBlock.h
        src/base/glBlock.cpp
        src/base/glBlock.h
        src/base/simulator.cpp
        src/base/simulator.h
        src/base/world.cpp
        src/base/world.h
        src/clock/clock.cpp
        src/clock/clock.h
        src/clock/clockNoise.cpp
        src/clock/clockNoise.h
        src/clock/qclock.cpp
        src/clock/qclock.h
        src/comm/network.cpp
        src/comm/network.h
        src/comm/rate.cpp
        src/comm/rate.h
        src/csg/csg.cpp
        src/csg/csg.h
        src/csg/csgParser.cpp
        src/csg/csgParser.h
        src/deps/Eigen/src/Cholesky/LDLT.h
        src/deps/Eigen/src/Cholesky/LLT.h
        src/deps/Eigen/src/Cholesky/LLT_LAPACKE.h
        src/deps/Eigen/src/CholmodSupport/CholmodSupport.h
        src/deps/Eigen/src/Core/arch/AltiVec/Complex.h
        src/deps/Eigen/src/Core/arch/AltiVec/MathFunctions.h
        src/deps/Eigen/src/Core/arch/AltiVec/PacketMath.h
        src/deps/Eigen/src/Core/arch/AVX/Complex.h
        src/deps/Eigen/src/Core/arch/AVX/MathFunctions.h
        src/deps/Eigen/src/Core/arch/AVX/PacketMath.h
        src/deps/Eigen/src/Core/arch/AVX/TypeCasting.h
        src/deps/Eigen/src/Core/arch/AVX512/MathFunctions.h
        src/deps/Eigen/src/Core/arch/AVX512/PacketMath.h
        src/deps/Eigen/src/Core/arch/CUDA/Complex.h
        src/deps/Eigen/src/Core/arch/CUDA/Half.h
        src/deps/Eigen/src/Core/arch/CUDA/MathFunctions.h
        src/deps/Eigen/src/Core/arch/CUDA/PacketMath.h
        src/deps/Eigen/src/Core/arch/CUDA/PacketMathHalf.h
        src/deps/Eigen/src/Core/arch/CUDA/TypeCasting.h
        src/deps/Eigen/src/Core/arch/Default/ConjHelper.h
        src/deps/Eigen/src/Core/arch/Default/Settings.h
        src/deps/Eigen/src/Core/arch/NEON/Complex.h
        src/deps/Eigen/src/Core/arch/NEON/MathFunctions.h
        src/deps/Eigen/src/Core/arch/NEON/PacketMath.h
        src/deps/Eigen/src/Core/arch/SSE/Complex.h
        src/deps/Eigen/src/Core/arch/SSE/MathFunctions.h
        src/deps/Eigen/src/Core/arch/SSE/PacketMath.h
        src/deps/Eigen/src/Core/arch/SSE/TypeCasting.h
        src/deps/Eigen/src/Core/arch/ZVector/Complex.h
        src/deps/Eigen/src/Core/arch/ZVector/MathFunctions.h
        src/deps/Eigen/src/Core/arch/ZVector/PacketMath.h
        src/deps/Eigen/src/Core/functors/AssignmentFunctors.h
        src/deps/Eigen/src/Core/functors/BinaryFunctors.h
        src/deps/Eigen/src/Core/functors/NullaryFunctors.h
        src/deps/Eigen/src/Core/functors/StlFunctors.h
        src/deps/Eigen/src/Core/functors/TernaryFunctors.h
        src/deps/Eigen/src/Core/functors/UnaryFunctors.h
        src/deps/Eigen/src/Core/products/GeneralBlockPanelKernel.h
        src/deps/Eigen/src/Core/products/GeneralMatrixMatrix.h
        src/deps/Eigen/src/Core/products/GeneralMatrixMatrix_BLAS.h
        src/deps/Eigen/src/Core/products/GeneralMatrixMatrixTriangular.h
        src/deps/Eigen/src/Core/products/GeneralMatrixMatrixTriangular_BLAS.h
        src/deps/Eigen/src/Core/products/GeneralMatrixVector.h
        src/deps/Eigen/src/Core/products/GeneralMatrixVector_BLAS.h
        src/deps/Eigen/src/Core/products/Parallelizer.h
        src/deps/Eigen/src/Core/products/SelfadjointMatrixMatrix.h
        src/deps/Eigen/src/Core/products/SelfadjointMatrixMatrix_BLAS.h
        src/deps/Eigen/src/Core/products/SelfadjointMatrixVector.h
        src/deps/Eigen/src/Core/products/SelfadjointMatrixVector_BLAS.h
        src/deps/Eigen/src/Core/products/SelfadjointProduct.h
        src/deps/Eigen/src/Core/products/SelfadjointRank2Update.h
        src/deps/Eigen/src/Core/products/TriangularMatrixMatrix.h
        src/deps/Eigen/src/Core/products/TriangularMatrixMatrix_BLAS.h
        src/deps/Eigen/src/Core/products/TriangularMatrixVector.h
        src/deps/Eigen/src/Core/products/TriangularMatrixVector_BLAS.h
        src/deps/Eigen/src/Core/products/TriangularSolverMatrix.h
        src/deps/Eigen/src/Core/products/TriangularSolverMatrix_BLAS.h
        src/deps/Eigen/src/Core/products/TriangularSolverVector.h
        src/deps/Eigen/src/Core/util/BlasUtil.h
        src/deps/Eigen/src/Core/util/Constants.h
        src/deps/Eigen/src/Core/util/DisableStupidWarnings.h
        src/deps/Eigen/src/Core/util/ForwardDeclarations.h
        src/deps/Eigen/src/Core/util/Macros.h
        src/deps/Eigen/src/Core/util/Memory.h
        src/deps/Eigen/src/Core/util/Meta.h
        src/deps/Eigen/src/Core/util/MKL_support.h
        src/deps/Eigen/src/Core/util/NonMPL2.h
        src/deps/Eigen/src/Core/util/ReenableStupidWarnings.h
        src/deps/Eigen/src/Core/util/StaticAssert.h
        src/deps/Eigen/src/Core/util/XprHelper.h
        src/deps/Eigen/src/Core/Array.h
        src/deps/Eigen/src/Core/ArrayBase.h
        src/deps/Eigen/src/Core/ArrayWrapper.h
        src/deps/Eigen/src/Core/Assign.h
        src/deps/Eigen/src/Core/Assign_MKL.h
        src/deps/Eigen/src/Core/AssignEvaluator.h
        src/deps/Eigen/src/Core/BandMatrix.h
        src/deps/Eigen/src/Core/Block.h
        src/deps/Eigen/src/Core/BooleanRedux.h
        src/deps/Eigen/src/Core/CommaInitializer.h
        src/deps/Eigen/src/Core/ConditionEstimator.h
        src/deps/Eigen/src/Core/CoreEvaluators.h
        src/deps/Eigen/src/Core/CoreIterators.h
        src/deps/Eigen/src/Core/CwiseBinaryOp.h
        src/deps/Eigen/src/Core/CwiseNullaryOp.h
        src/deps/Eigen/src/Core/CwiseTernaryOp.h
        src/deps/Eigen/src/Core/CwiseUnaryOp.h
        src/deps/Eigen/src/Core/CwiseUnaryView.h
        src/deps/Eigen/src/Core/DenseBase.h
        src/deps/Eigen/src/Core/DenseCoeffsBase.h
        src/deps/Eigen/src/Core/DenseStorage.h
        src/deps/Eigen/src/Core/Diagonal.h
        src/deps/Eigen/src/Core/DiagonalMatrix.h
        src/deps/Eigen/src/Core/DiagonalProduct.h
        src/deps/Eigen/src/Core/Dot.h
        src/deps/Eigen/src/Core/EigenBase.h
        src/deps/Eigen/src/Core/ForceAlignedAccess.h
        src/deps/Eigen/src/Core/Fuzzy.h
        src/deps/Eigen/src/Core/GeneralProduct.h
        src/deps/Eigen/src/Core/GenericPacketMath.h
        src/deps/Eigen/src/Core/GlobalFunctions.h
        src/deps/Eigen/src/Core/Inverse.h
        src/deps/Eigen/src/Core/IO.h
        src/deps/Eigen/src/Core/Map.h
        src/deps/Eigen/src/Core/MapBase.h
        src/deps/Eigen/src/Core/MathFunctions.h
        src/deps/Eigen/src/Core/MathFunctionsImpl.h
        src/deps/Eigen/src/Core/Matrix.h
        src/deps/Eigen/src/Core/MatrixBase.h
        src/deps/Eigen/src/Core/NestByValue.h
        src/deps/Eigen/src/Core/NoAlias.h
        src/deps/Eigen/src/Core/NumTraits.h
        src/deps/Eigen/src/Core/PermutationMatrix.h
        src/deps/Eigen/src/Core/PlainObjectBase.h
        src/deps/Eigen/src/Core/Product.h
        src/deps/Eigen/src/Core/ProductEvaluators.h
        src/deps/Eigen/src/Core/Random.h
        src/deps/Eigen/src/Core/Redux.h
        src/deps/Eigen/src/Core/Ref.h
        src/deps/Eigen/src/Core/Replicate.h
        src/deps/Eigen/src/Core/ReturnByValue.h
        src/deps/Eigen/src/Core/Reverse.h
        src/deps/Eigen/src/Core/Select.h
        src/deps/Eigen/src/Core/SelfAdjointView.h
        src/deps/Eigen/src/Core/SelfCwiseBinaryOp.h
        src/deps/Eigen/src/Core/Solve.h
        src/deps/Eigen/src/Core/SolverBase.h
        src/deps/Eigen/src/Core/SolveTriangular.h
        src/deps/Eigen/src/Core/StableNorm.h
        src/deps/Eigen/src/Core/Stride.h
        src/deps/Eigen/src/Core/Swap.h
        src/deps/Eigen/src/Core/Transpose.h
        src/deps/Eigen/src/Core/Transpositions.h
        src/deps/Eigen/src/Core/TriangularMatrix.h
        src/deps/Eigen/src/Core/VectorBlock.h
        src/deps/Eigen/src/Core/VectorwiseOp.h
        src/deps/Eigen/src/Core/Visitor.h
        src/deps/Eigen/src/Eigenvalues/ComplexEigenSolver.h
        src/deps/Eigen/src/Eigenvalues/ComplexSchur.h
        src/deps/Eigen/src/Eigenvalues/ComplexSchur_LAPACKE.h
        src/deps/Eigen/src/Eigenvalues/EigenSolver.h
        src/deps/Eigen/src/Eigenvalues/GeneralizedEigenSolver.h
        src/deps/Eigen/src/Eigenvalues/GeneralizedSelfAdjointEigenSolver.h
        src/deps/Eigen/src/Eigenvalues/HessenbergDecomposition.h
        src/deps/Eigen/src/Eigenvalues/MatrixBaseEigenvalues.h
        src/deps/Eigen/src/Eigenvalues/RealQZ.h
        src/deps/Eigen/src/Eigenvalues/RealSchur.h
        src/deps/Eigen/src/Eigenvalues/RealSchur_LAPACKE.h
        src/deps/Eigen/src/Eigenvalues/SelfAdjointEigenSolver.h
        src/deps/Eigen/src/Eigenvalues/SelfAdjointEigenSolver_LAPACKE.h
        src/deps/Eigen/src/Eigenvalues/Tridiagonalization.h
        src/deps/Eigen/src/Geometry/arch/Geometry_SSE.h
        src/deps/Eigen/src/Geometry/AlignedBox.h
        src/deps/Eigen/src/Geometry/AngleAxis.h
        src/deps/Eigen/src/Geometry/EulerAngles.h
        src/deps/Eigen/src/Geometry/Homogeneous.h
        src/deps/Eigen/src/Geometry/Hyperplane.h
        src/deps/Eigen/src/Geometry/OrthoMethods.h
        src/deps/Eigen/src/Geometry/ParametrizedLine.h
        src/deps/Eigen/src/Geometry/Quaternion.h
        src/deps/Eigen/src/Geometry/Rotation2D.h
        src/deps/Eigen/src/Geometry/RotationBase.h
        src/deps/Eigen/src/Geometry/Scaling.h
        src/deps/Eigen/src/Geometry/Transform.h
        src/deps/Eigen/src/Geometry/Translation.h
        src/deps/Eigen/src/Geometry/Umeyama.h
        src/deps/Eigen/src/Householder/BlockHouseholder.h
        src/deps/Eigen/src/Householder/Householder.h
        src/deps/Eigen/src/Householder/HouseholderSequence.h
        src/deps/Eigen/src/IterativeLinearSolvers/BasicPreconditioners.h
        src/deps/Eigen/src/IterativeLinearSolvers/BiCGSTAB.h
        src/deps/Eigen/src/IterativeLinearSolvers/ConjugateGradient.h
        src/deps/Eigen/src/IterativeLinearSolvers/IncompleteCholesky.h
        src/deps/Eigen/src/IterativeLinearSolvers/IncompleteLUT.h
        src/deps/Eigen/src/IterativeLinearSolvers/IterativeSolverBase.h
        src/deps/Eigen/src/IterativeLinearSolvers/LeastSquareConjugateGradient.h
        src/deps/Eigen/src/IterativeLinearSolvers/SolveWithGuess.h
        src/deps/Eigen/src/Jacobi/Jacobi.h
        src/deps/Eigen/src/LU/arch/Inverse_SSE.h
        src/deps/Eigen/src/LU/Determinant.h
        src/deps/Eigen/src/LU/FullPivLU.h
        src/deps/Eigen/src/LU/InverseImpl.h
        src/deps/Eigen/src/LU/PartialPivLU.h
        src/deps/Eigen/src/LU/PartialPivLU_LAPACKE.h
        src/deps/Eigen/src/MetisSupport/MetisSupport.h
        src/deps/Eigen/src/misc/blas.h
        src/deps/Eigen/src/misc/Image.h
        src/deps/Eigen/src/misc/Kernel.h
        src/deps/Eigen/src/misc/lapack.h
        src/deps/Eigen/src/misc/lapacke.h
        src/deps/Eigen/src/misc/lapacke_mangling.h
        src/deps/Eigen/src/misc/RealSvd2x2.h
        src/deps/Eigen/src/OrderingMethods/Amd.h
        src/deps/Eigen/src/OrderingMethods/Eigen_Colamd.h
        src/deps/Eigen/src/OrderingMethods/Ordering.h
        src/deps/Eigen/src/PardisoSupport/PardisoSupport.h
        src/deps/Eigen/src/PaStiXSupport/PaStiXSupport.h
        src/deps/Eigen/src/plugins/ArrayCwiseBinaryOps.h
        src/deps/Eigen/src/plugins/ArrayCwiseUnaryOps.h
        src/deps/Eigen/src/plugins/BlockMethods.h
        src/deps/Eigen/src/plugins/CommonCwiseBinaryOps.h
        src/deps/Eigen/src/plugins/CommonCwiseUnaryOps.h
        src/deps/Eigen/src/plugins/MatrixCwiseBinaryOps.h
        src/deps/Eigen/src/plugins/MatrixCwiseUnaryOps.h
        src/deps/Eigen/src/QR/ColPivHouseholderQR.h
        src/deps/Eigen/src/QR/ColPivHouseholderQR_LAPACKE.h
        src/deps/Eigen/src/QR/CompleteOrthogonalDecomposition.h
        src/deps/Eigen/src/QR/FullPivHouseholderQR.h
        src/deps/Eigen/src/QR/HouseholderQR.h
        src/deps/Eigen/src/QR/HouseholderQR_LAPACKE.h
        src/deps/Eigen/src/SparseCholesky/SimplicialCholesky.h
        src/deps/Eigen/src/SparseCholesky/SimplicialCholesky_impl.h
        src/deps/Eigen/src/SparseCore/AmbiVector.h
        src/deps/Eigen/src/SparseCore/CompressedStorage.h
        src/deps/Eigen/src/SparseCore/ConservativeSparseSparseProduct.h
        src/deps/Eigen/src/SparseCore/MappedSparseMatrix.h
        src/deps/Eigen/src/SparseCore/SparseAssign.h
        src/deps/Eigen/src/SparseCore/SparseBlock.h
        src/deps/Eigen/src/SparseCore/SparseColEtree.h
        src/deps/Eigen/src/SparseCore/SparseCompressedBase.h
        src/deps/Eigen/src/SparseCore/SparseCwiseBinaryOp.h
        src/deps/Eigen/src/SparseCore/SparseCwiseUnaryOp.h
        src/deps/Eigen/src/SparseCore/SparseDenseProduct.h
        src/deps/Eigen/src/SparseCore/SparseDiagonalProduct.h
        src/deps/Eigen/src/SparseCore/SparseDot.h
        src/deps/Eigen/src/SparseCore/SparseFuzzy.h
        src/deps/Eigen/src/SparseCore/SparseMap.h
        src/deps/Eigen/src/SparseCore/SparseMatrix.h
        src/deps/Eigen/src/SparseCore/SparseMatrixBase.h
        src/deps/Eigen/src/SparseCore/SparsePermutation.h
        src/deps/Eigen/src/SparseCore/SparseProduct.h
        src/deps/Eigen/src/SparseCore/SparseRedux.h
        src/deps/Eigen/src/SparseCore/SparseRef.h
        src/deps/Eigen/src/SparseCore/SparseSelfAdjointView.h
        src/deps/Eigen/src/SparseCore/SparseSolverBase.h
        src/deps/Eigen/src/SparseCore/SparseSparseProductWithPruning.h
        src/deps/Eigen/src/SparseCore/SparseTranspose.h
        src/deps/Eigen/src/SparseCore/SparseTriangularView.h
        src/deps/Eigen/src/SparseCore/SparseUtil.h
        src/deps/Eigen/src/SparseCore/SparseVector.h
        src/deps/Eigen/src/SparseCore/SparseView.h
        src/deps/Eigen/src/SparseCore/TriangularSolver.h
        src/deps/Eigen/src/SparseLU/SparseLU.h
        src/deps/Eigen/src/SparseLU/SparseLU_column_bmod.h
        src/deps/Eigen/src/SparseLU/SparseLU_column_dfs.h
        src/deps/Eigen/src/SparseLU/SparseLU_copy_to_ucol.h
        src/deps/Eigen/src/SparseLU/SparseLU_gemm_kernel.h
        src/deps/Eigen/src/SparseLU/SparseLU_heap_relax_snode.h
        src/deps/Eigen/src/SparseLU/SparseLU_kernel_bmod.h
        src/deps/Eigen/src/SparseLU/SparseLU_Memory.h
        src/deps/Eigen/src/SparseLU/SparseLU_panel_bmod.h
        src/deps/Eigen/src/SparseLU/SparseLU_panel_dfs.h
        src/deps/Eigen/src/SparseLU/SparseLU_pivotL.h
        src/deps/Eigen/src/SparseLU/SparseLU_pruneL.h
        src/deps/Eigen/src/SparseLU/SparseLU_relax_snode.h
        src/deps/Eigen/src/SparseLU/SparseLU_Structs.h
        src/deps/Eigen/src/SparseLU/SparseLU_SupernodalMatrix.h
        src/deps/Eigen/src/SparseLU/SparseLU_Utils.h
        src/deps/Eigen/src/SparseLU/SparseLUImpl.h
        src/deps/Eigen/src/SparseQR/SparseQR.h
        src/deps/Eigen/src/SPQRSupport/SuiteSparseQRSupport.h
        src/deps/Eigen/src/StlSupport/details.h
        src/deps/Eigen/src/StlSupport/StdDeque.h
        src/deps/Eigen/src/StlSupport/StdList.h
        src/deps/Eigen/src/StlSupport/StdVector.h
        src/deps/Eigen/src/SuperLUSupport/SuperLUSupport.h
        src/deps/Eigen/src/SVD/BDCSVD.h
        src/deps/Eigen/src/SVD/JacobiSVD.h
        src/deps/Eigen/src/SVD/JacobiSVD_LAPACKE.h
        src/deps/Eigen/src/SVD/SVDBase.h
        src/deps/Eigen/src/SVD/UpperBidiagonalization.h
        src/deps/Eigen/src/UmfPackSupport/UmfPackSupport.h
        src/deps/TinyXML/tinystr.cpp
        src/deps/TinyXML/tinystr.h
        src/deps/TinyXML/tinyxml.cpp
        src/deps/TinyXML/tinyxml.h
        src/deps/TinyXML/tinyxmlerror.cpp
        src/deps/TinyXML/tinyxmlparser.cpp
        src/events/cppScheduler.cpp
        src/events/cppScheduler.h
        src/events/events.cpp
        src/events/events.h
        src/events/scheduler.cpp
        src/events/scheduler.h
        src/events/uniqueEventsId.h

        src/grid/lattice.cpp
        src/grid/lattice.h
        src/grid/target.cpp
        src/grid/target.h
        src/gui/camera.cpp
        src/gui/camera.h
        src/gui/interface.cpp
        src/gui/interface.h
        src/gui/objLoader.cpp
        src/gui/objLoader.h
        src/gui/openglViewer.cpp
        src/gui/openglViewer.h
        src/gui/shaders.cpp
        src/gui/shaders.h
        src/gui/vertexArray.cpp
        src/gui/vertexArray.h
        src/math/matrix44.cpp
        src/math/matrix44.h
        src/math/vector3D.cpp
        src/math/vector3D.h
        src/motion/teleportationEvents.cpp
        src/motion/teleportationEvents.h
        src/motion/translationEvents.cpp
        src/motion/translationEvents.h
        src/stats/configStat.cpp
        src/stats/configStat.h
        src/stats/statsCollector.cpp
        src/stats/statsCollector.h
        src/stats/statsIndividual.cpp
        src/stats/statsIndividual.h
        src/utils/color.cpp
        src/utils/color.h
        src/utils/commandLine.cpp
        src/utils/commandLine.h
        src/utils/configExporter.cpp
        src/utils/configExporter.h
        src/utils/exceptions.h
        src/utils/global.h
        src/utils/random.cpp
        src/utils/random.h
        src/utils/scenario.h
        src/utils/sema.h
        src/utils/tDefs.h
        src/utils/trace.cpp
        src/utils/trace.h
        src/utils/utils.cpp
        src/utils/utils.h
        src/replay/replayExporter.cpp
        src/replay/replayExporter.h
        src/replay/replayTags.h
)
add_library(src SHARED ${COMMON_SRC_FILES})
IF (APPLE)
        target_link_libraries(src    muparser   -lGLEW  ${GLUT_LIBRARY_DIRS}/libglut.dylib  OpenGL::GL)
ENDIF (APPLE)

add_library(BlinkyBlocks STATIC
        src/robots/blinkyBlocks/blinkyBlocksBlock.cpp
        src/robots/blinkyBlocks/blinkyBlocksBlock.h
        src/robots/blinkyBlocks/blinkyBlocksBlockCode.cpp
        src/robots/blinkyBlocks/blinkyBlocksBlockCode.h
        src/robots/blinkyBlocks/blinkyBlocksEvents.cpp
        src/robots/blinkyBlocks/blinkyBlocksEvents.h
        src/robots/blinkyBlocks/blinkyBlocksGlBlock.cpp
        src/robots/blinkyBlocks/blinkyBlocksGlBlock.h
        src/robots/blinkyBlocks/blinkyBlocksScenario.h
        src/robots/blinkyBlocks/blinkyBlocksSimulator.cpp
        src/robots/blinkyBlocks/blinkyBlocksSimulator.h
        src/robots/blinkyBlocks/blinkyBlocksWorld.cpp
        src/robots/blinkyBlocks/blinkyBlocksWorld.h
)

target_link_libraries(BlinkyBlocks  src)

add_library(Catoms3D STATIC
        src/robots/catoms3D/catoms3DBlock.cpp
        src/robots/catoms3D/catoms3DBlock.h
        src/robots/catoms3D/catoms3DBlockCode.cpp
        src/robots/catoms3D/catoms3DBlockCode.h
        src/robots/catoms3D/catoms3DRotationEvents.cpp
        src/robots/catoms3D/catoms3DRotationEvents.h
        src/robots/catoms3D/catoms3DMotionEngine.cpp
        src/robots/catoms3D/catoms3DMotionEngine.h
        src/robots/catoms3D/catoms3DMotionRules.cpp
        src/robots/catoms3D/catoms3DMotionRules.h
        src/robots/catoms3D/catoms3DGlBlock.cpp
        src/robots/catoms3D/catoms3DGlBlock.h
        src/robots/catoms3D/catoms3DSimulator.cpp
        src/robots/catoms3D/catoms3DSimulator.h
        src/robots/catoms3D/catoms3DWorld.cpp
        src/robots/catoms3D/catoms3DWorld.h
        )

target_link_libraries(Catoms3D  src)

add_library(SmartBlocks STATIC
        src/robots/smartBlocks/smartBlocksBlock.cpp
        src/robots/smartBlocks/smartBlocksBlock.h
        src/robots/smartBlocks/smartBlocksBlockCode.cpp
        src/robots/smartBlocks/smartBlocksBlockCode.h
        src/robots/smartBlocks/smartBlocksGlBlock.cpp
        src/robots/smartBlocks/smartBlocksGlBlock.h
        src/robots/smartBlocks/smartBlocksSimulator.cpp
        src/robots/smartBlocks/smartBlocksSimulator.h
        src/robots/smartBlocks/smartBlocksWorld.cpp
        src/robots/smartBlocks/smartBlocksWorld.h
        )

target_link_libraries(SmartBlocks  src)

add_library(SlidingCubes STATIC
        src/robots/slidingCubes/slidingCubesGlBlock.cpp
        src/robots/slidingCubes/slidingCubesGlBlock.h
        src/robots/slidingCubes/slidingCubesBlock.cpp
        src/robots/slidingCubes/slidingCubesBlock.h
        src/robots/slidingCubes/slidingCubesBlockCode.cpp
        src/robots/slidingCubes/slidingCubesBlockCode.h
        src/robots/slidingCubes/slidingCubesMotionRules.cpp
        src/robots/slidingCubes/slidingCubesMotionRules.h
        src/robots/slidingCubes/slidingCubesSimulator.cpp
        src/robots/slidingCubes/slidingCubesSimulator.h
        src/robots/slidingCubes/slidingCubesWorld.cpp
        src/robots/slidingCubes/slidingCubesWorld.h
        )

target_link_libraries(SlidingCubes  src)

add_library(Datoms STATIC
        src/robots/datoms/datomsBlock.cpp
        src/robots/datoms/datomsBlock.h
        src/robots/datoms/datomsBlockCode.cpp
        src/robots/datoms/datomsBlockCode.h
        src/robots/datoms/datomsGlBlock.cpp
        src/robots/datoms/datomsGlBlock.h
        src/robots/datoms/datomsMotionEngine.cpp
        src/robots/datoms/datomsMotionEngine.h
        src/robots/datoms/datomsSimulator.cpp
        src/robots/datoms/datomsSimulator.h
        src/robots/datoms/datomsWorld.cpp
        src/robots/datoms/datomsWorld.h
        src/robots/datoms/deformationEvents.cpp
        src/robots/datoms/deformationEvents.h
        src/robots/datoms/datomsMotionRules.h
        src/robots/datoms/datomsMotionRules.cpp
        )
target_link_libraries(Datoms src)

add_library(Hexanodes STATIC
        src/robots/hexanodes/hexanodesBlock.cpp
        src/robots/hexanodes/hexanodesBlock.h
        src/robots/hexanodes/hexanodesBlockCode.cpp
        src/robots/hexanodes/hexanodesBlockCode.h
        src/robots/hexanodes/hexanodesGlBlock.cpp
        src/robots/hexanodes/hexanodesGlBlock.h
        src/robots/hexanodes/hexanodesMotionEngine.cpp
        src/robots/hexanodes/hexanodesMotionEngine.h
        src/robots/hexanodes/hexanodesMotionEvents.cpp
        src/robots/hexanodes/hexanodesMotionEvents.h
        src/robots/hexanodes/hexanodesSimulator.cpp
        src/robots/hexanodes/hexanodesSimulator.h
        src/robots/hexanodes/hexanodesWorld.cpp
        src/robots/hexanodes/hexanodesWorld.h
        )

target_link_libraries(Hexanodes src)

